[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["EmmetMack <emmet.mack10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.49.0"
uvicorn = "^0.20.0"
SQLAlchemy = {version = "^2.0.0b1", allow-prereleases = true}
aiosqlite = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
